Ui chages for home and upload product and profile

--- a/src/app/admin/account-verification/account-verification.component.html
+++ b/src/app/admin/account-verification/account-verification.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row" style="margin-top: 70px">
+    <div class="row">
   
       <div class="card card--big" *ngFor="let artist of artists" >
         <img class="card__image" [src]="artist.profile.profilepic" alt="profile picture">
