--- a/src/app/admin/image-verification/image-verification.component.html
+++ b/src/app/admin/image-verification/image-verification.component.html
@@ -1,5 +1,5 @@
 <div class="container helper">
-    <div class="row" style="margin-top: 70px">
+    <div class="row" >
       <div class="card card--big" *ngFor="let product of products" >
         <img class="card__image" [src]="product.image" alt="product image">
          
