--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -108,11 +108,27 @@
                                    </div>
                         </div>     <!-- first col close -->
         
-
+                        <div class="file-upload">
+                            <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
+                          
+                            <div class="image-upload-wrap">
+                              <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
+                              <div class="drag-text">
+                                <h3>Drag and drop a file or select add Image</h3>
+                              </div>
+                            </div>
+                            <div class="file-upload-content">
+                              <img class="file-upload-image" src="#" alt="your image" />
+                              <div class="image-title-wrap">
+                                <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
+                              </div>
+                            </div>
+                          </div>
                        
                     </div>
 
                 </div>
+                
         </div> <!-- pannel close -->
             <!-- outside the box -->
         </div>
@@ -179,4 +195,6 @@
 
 </div>
 </div>
-<app-footer></app-footer>
+<app-footer>
+    
+</app-footer>
