--- a/src/app/admin/account-verification/account-verification.component.html
+++ b/src/app/admin/account-verification/account-verification.component.html
@@ -58,7 +58,7 @@
             
         
         <button (click)="verifyArtist(artist)" class="card__button"><Strong style="color:dimgrey">Verify</Strong></button>
-        <button (click)="rejectArtist(artist)" class="card__button"><Strong style="color:#d91e18">Reject</Strong></button>
+        <button (click)="open(content); setRejectArtistId(artist.id)" class="card__button"><Strong style="color:#d91e18">Reject</Strong></button>
          
           </div>
   
@@ -90,7 +90,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark"  [disabled]= "comment.value.length == 0" (click)="modal.close('Save click'); rejectArtist(comment.value);">Send</button>
+      <button type="button" class="btn btn-success"  [disabled]= "comment.value.length == 0" (click)="modal.close('Save click'); rejectArtist(comment.value);">Send</button>
     </div>
   </ng-template>
   
