--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -32,14 +32,9 @@
       
     </div>  
 
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <img [src]="images[2]" alt="Random third slide" class="fullscreen" style="opacity:0.6">
-        <div class="carousel-caption headline" style="top:90px">
-          <h1 style="color:white;">Heritages</h1>
-          <span class="btn btn-primary btn-lg" style="background-color: rgba(89, 171, 227, 1);color:white; border-radius: 0px; border-color: white">Shop
-            Now</span>
+      
+ 
+     
 
       <div class="col-md-3">
           <div class="square-card">
@@ -47,7 +42,7 @@
               <div class="card-header">
                 <img [src]="artistOfTheWeek.users.profile.profilepic" class="img-responsive" style="width: 100%">
                   <div class="card-header_overlay text-center">
-                      <span class="pill" style="font-size: 10px;">Artist of the Week</span>
+                      <span class="pill" style="font-size: 10px;" (click)="showProfileForArtistOfTheWeek()">Artist of the Week</span>
                    </div>
               </div>
   
@@ -67,7 +62,7 @@
         </div>
 
        
-
+</div>
 
 
       <div class="col-md-12" style="text-align: center;">
@@ -101,7 +96,7 @@
                                       </div>
                                   </div>
                                   <div class="product-item-details">
-                                      <h2><a (click)="viewProductDetail($event)"><strong id ="{{prod.id}}">{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
+                                      <h2><a (click)="viewProductDetail($event)"><strong id ="{{prod.id}}" style="cursor: pointer">{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
                                        
                                       <div class="price-like-box">
                                           <div class="pull-left item-price">
