--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -35,7 +35,7 @@
             </label>
           </div>
 
-          <div *ngIf="Phone.invalid && (Phone.dirty || Phone.touched)" class="alert alert-danger">
+          <div *ngIf="Phone.invalid && (Phone.dirty || Phone.touched)" class="alert alert-danger" style="height:50px">
             Phone is required
           </div>
     
