--- a/src/app/product-upload/product-upload.component.html
+++ b/src/app/product-upload/product-upload.component.html
@@ -28,13 +28,13 @@
           <div class="form-group">
             <label for="price">Price:</label>
                <input type="number" name="price" class="form-control" value="" formControlName="price">
-           
+         
           </div>
 
 		   <div class="form-group">
-           <label for="availability">Availability:
+           <label for="availability">Availability:</label>
                <input type="text" name="availability" class="form-control" value="" formControlName="availability">
-            </label>
+        
           </div>
     
           <div class="form-group">
