--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,8 +3,8 @@
   <div class="form">
     <form class="" [formGroup]="signinForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <label for="email">Email:
-          <input type="email" name="email" class="form-control" value="" formControlName="email" (keyup)="showError = false">
+        <label for="email">
+          <input type="email" name="email" class="form-control" value="" formControlName="email" (keyup)="showError = false" placeholder="Email">
         </label>
       </div>
       <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
@@ -12,9 +12,9 @@
       </div>
 
       <div class="form-group">
-        <label for="password">Password:
+        <label for="password">
           <input type="password" name="password" value="" class="form-control" placeholder="Password" formControlName="password"
-            (keyup)="showError = false">
+            (keyup)="showError = false" placeholder="Password">
         </label>
       </div>
 
