--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -91,8 +91,8 @@
                               <div class="item-details-overly-info">
                                 <ul class="list-inline ">
 
-                                  <li class="item-add-to-cart"><a href="#" title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                                  <li class="item-wishlist"><a href="#" title="Wish list"><i class="fa fa-heart-o"></i></a></li>
+                                  <li class="item-add-to-cart"><a title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                  <li *ngIf="enableWishlist" class="item-wishlist" (click)="addToWishlist(prod.id)"><a title="Wish list"><i class="fa fa-heart-o"></i></a></li>
                                   <!--  <li class="item-like"><a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a></li> -->
                                 </ul>
                               </div>
@@ -115,7 +115,7 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                               </div> -->
-                              <ngb-rating [(rate)]="prod.rating.average" (rateChange)="rateChanged($event, prod.id, prod.user.id)" [readonly]="readonly"></ngb-rating>
+                              <ngb-rating *ngIf="prod.rating.average" [(rate)]="prod.rating.average" (rateChange)="rateChanged($event, prod.id)" [readonly]="readonly"></ngb-rating>
 
                             </div>
                           </div>
