--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -60,7 +60,7 @@
           <a class="nav-link" *ngIf="navbarService.getShowSignup() | async" routerLink="/signup"><strong>Sign Up</strong></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" *ngIf="navbarService.getShowCart() | async" href="#"><span class="fa fa-cart-plus"></span><strong>Cart</strong></a>
+          <a class="nav-link" *ngIf="navbarService.getShowCart() | async" routerLink="/cart"><span class="fa fa-cart-plus"></span><strong>Cart</strong></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" *ngIf="navbarService.getShowDashboard() | async" routerLink="admin"><strong>Dashboard</strong></a>
