--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -55,7 +55,7 @@
                             <hr>
                         </div>
                         <div class="col-md-8 pull-right">
-                            <a href="cart.html"> <button class="btn btn-primary  btn-md btn-brand btn-full-width" style="margin-left:0%; width:60%">
+                            <a > <button id="{{productDetails.id}}" (click)= "addToCart($event)" class="btn btn-primary  btn-md btn-brand btn-full-width" style="margin-left:0%; width:60%" [hidden]="!isLoggedIn">
                                 Add to Cart
                             </button></a>
                         </div>
@@ -112,35 +112,35 @@
         </div>
 
     
-<div class="headline">
+<div class="headline" *ngIf="products.length > 0">
     <h2 >More By <b style="font-weight: bold; margin-bottom: 0%">{{productDetails.user.fullName}}</b></h2>
 </div>
-<div class="row" *ngIf="products.length > 0" >
+<div class="row"  >
         <div class="col-md-3 col-sm-6" *ngFor = "let prod of products; let i=index" >
           <div *ngIf="i < 4">
             <div class="square-card">
-<a href="#" alt="square card" style="display: block;">
+<a alt="square card" style="display: block;">
 
               <div class="product-page-single">
                 <div class="single-product-item">
 
     <div class="product-image-wrap">
     <div class="card-header" style="padding: 0%">
-                        <a href="#"><img src="{{prod.image}}" alt="Product image" style="height:100%" ></a>
+                        <a><img src="{{prod.image}}" alt="Product image" style="height:100%" ></a>
                         </div>
                         <div class="product-detail-inner">
                             <div class="item-details-overly-info">
                                 <ul class="list-inline ">
                                   
-                                    <li class="item-add-to-cart"><a href="#" title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                                    <li class="item-wishlist"><a href="#" title="Wish list"><i class="fa fa-heart-o"></i></a></li>
+                                    <li class="item-add-to-cart"><a  title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                                    <li class="item-wishlist"><a title="Wish list"><i class="fa fa-heart-o"></i></a></li>
                                    <!--  <li class="item-like"><a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a></li> -->
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="product-item-details">
-                        <h2><a href="#"><strong>{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
+                        <h2><a (click)="viewProductDetail($event)"><strong id="{{prod.id}}">{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
                          
                         <div class="price-like-box">
                             <div class="pull-left item-price">
