cart page changes

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,100 +1,89 @@
-<div class="container">
-
-    <div class="row"> 
-         <div class="col-md-6">
-        
-
-             <div class="row">
-                 <h3>  2 items in your cart</h3>
-             </div>
-        
-       </div> 
-
-
+<div class="login-page">
+    <div class="banner">Upload<strong> Product</strong></div>
        
-  </div>
-<!-- </section> -->
-
-
-    <div class="row">
-        <div class="col-md-11">
-            <div class="table-responsive">
-
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">Arts </th>
-                            <th scope="col">Product</th>
-                            <th scope="col">Available</th>
-                            <th scope="col" style="width:10%"></th>
-                            <th scope="col" class="text-right">Price</th>
-                           
-                        </tr>
-                    </thead>
-                    <tbody>
-                          <tr>
-                            <td><img src="images/thumb/Kiran-3_800x604.jpg" style="width: 25%"> </td>
-                            <td>Beginning</td>
-                           
-                            <td> available</td>
-                            <td><a href="login.html"></a> </td>
-                            <!-- <td><input class="form-control" type="text" value="1" ></td> -->
-                            <td class="text-right">Rs.1,50,000.00</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger">
-                                <i class="fa fa-trash"></i> 
-                            </button> </td>
-                        </tr>
-                        <tr>
-                            <td><img src="images/thumb/smallRicksaw.png" style="width: 25%" > </td>
-                            <td>Hardworking Nepali </td>
-                            <td> 1 piece only </td>
-                            <td><a href="login.html"></a> </td>
-                            <td class="text-right">Rs.3,550.00</td>
-                            <td class="text-right"><button class="btn btn-sm btn-danger">
-                                <i class="fa fa-trash"></i> 
-                            </button> </td>
-                        </tr>
-                      
-
-                        
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td> 
-                            <td>Sub-Total</td>
-                            <td class="text-right">Rs.1,53,500.00</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-
-                            <td></td>
-                            <td>Shipping</td>
-                            <td class="text-right">Rs.200.00</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td><strong>Total</strong></td>
-                            <td class="text-right"><strong>Rs.1,57,050.00</strong></td>
-                        </tr>
-                        
-                    </tbody>
-
-                </table>
-
-            </div>
-                            <div class="pull-right">
-                    <a href="paymentForm.html"><button class="btn btn-primary btn-sm  ">Proceed For Payment</button></a>
+    <!-- </section> -->
+    
+    <div class="form">
+        <div class="row" style="margin:0%">
+           
+                <div class="table-responsive">
+    
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Arts </th>
+                                <th scope="col">Product</th>
+                                <th scope="col">Available</th>
+                                <th scope="col" style="width:10%"></th>
+                                <th scope="col" class="text-right">Price</th>
+                               
+                            </tr>
+                        </thead>
+                        <tbody>
+                              <tr>
+                                <td><img src="images/thumb/Kiran-3_800x604.jpg" style="width: 25%"> </td>
+                                <td>Beginning</td>
+                               
+                                <td> available</td>
+                                <td><a href="login.html"></a> </td>
+                                <!-- <td><input class="form-control" type="text" value="1" ></td> -->
+                                <td class="text-right">Rs.1,50,000.00</td>
+                                <td class="text-right"><button class="btn btn-sm " style="background-color:red;color:white; border-color: white">
+                                    <i class="fa fa-trash"></i> 
+                                </button> </td>
+                            </tr>
+                            <tr>
+                                <td><img src="images/thumb/smallRicksaw.png" style="width: 25%" > </td>
+                                <td>Hardworking Nepali </td>
+                                <td> 1 piece only </td>
+                                <td><a href="login.html"></a> </td>
+                                <td class="text-right">Rs.3,550.00</td>
+                                <td class="text-right"><button class="btn btn-sm " style="background-color:red;color:white;border-color: white">
+                                    <i class="fa fa-trash"></i> 
+                                </button> </td>
+                            </tr>
+                          
+    
+                            
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td> 
+                                <td>Sub-Total</td>
+                                <td class="text-right">Rs.1,53,500.00</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+    
+                                <td></td>
+                                <td>Shipping</td>
+                                <td class="text-right">Rs.200.00</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><strong>Total</strong></td>
+                                <td class="text-right"><strong>Rs.1,57,050.00</strong></td>
+                            </tr>
+                            
+                        </tbody>
+    
+                    </table>
+                    <a href="demo.html" class="pull-left"><strong>Keep Shopping</strong></a>
+                    <div class="pull-right">
+                        <a href="paymentForm.html"><button name="button" class="button">Proceed For Payment</button></a>
+                    </div>
                 </div>
-  
-  <a href="demo.html" class="pull-left">Keep Shopping</a>
-        </div>
+                              
+      
+      
+          
+    </div>
 </div>
-
-
-</div>
+    
+    </div>
